--- a/SoundController/Base.lproj/Main.storyboard
+++ b/SoundController/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bpL-rX-zuV">
-                                <rect key="frame" x="253" y="113" width="94" height="30"/>
+                                <rect key="frame" x="253" y="70" width="94" height="30"/>
                                 <state key="normal" title="Record Audio">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -26,7 +26,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MSt-fy-VeA">
-                                <rect key="frame" x="248" y="217" width="104" height="30"/>
+                                <rect key="frame" x="248" y="150" width="104" height="30"/>
                                 <state key="normal" title="Play Recording">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -35,7 +35,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YxS-Eu-bJL">
-                                <rect key="frame" x="216" y="317" width="168" height="30"/>
+                                <rect key="frame" x="216" y="230" width="168" height="30"/>
                                 <state key="normal" title="Is Everything Awesome?">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -44,14 +44,36 @@
                                     <action selector="playEverythingIsAwesome:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="byx-Lf-03U"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SK8-gC-GMq">
+                                <rect key="frame" x="228" y="310" width="45" height="30"/>
+                                <state key="normal" title="Sound">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="playSound:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="QBI-gB-aEf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gc-Go-194">
+                                <rect key="frame" x="334" y="310" width="32" height="30"/>
+                                <state key="normal" title="Alert">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="playAlert:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ENB-6Y-c7z"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="YxS-Eu-bJL" firstAttribute="top" secondItem="MSt-fy-VeA" secondAttribute="bottom" constant="70" id="5y2-76-paK"/>
+                            <constraint firstItem="YxS-Eu-bJL" firstAttribute="top" secondItem="MSt-fy-VeA" secondAttribute="bottom" constant="50" id="5y2-76-paK"/>
+                            <constraint firstItem="SK8-gC-GMq" firstAttribute="top" secondItem="YxS-Eu-bJL" secondAttribute="bottom" constant="50" id="6Qh-aA-31t"/>
+                            <constraint firstItem="3gc-Go-194" firstAttribute="centerY" secondItem="SK8-gC-GMq" secondAttribute="centerY" id="AFw-o1-Y8n"/>
                             <constraint firstItem="YxS-Eu-bJL" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="Bm4-QX-M90"/>
+                            <constraint firstAttribute="centerX" secondItem="3gc-Go-194" secondAttribute="centerX" constant="-50" id="IR9-am-FDv"/>
                             <constraint firstItem="MSt-fy-VeA" firstAttribute="centerX" secondItem="bpL-rX-zuV" secondAttribute="centerX" id="icV-8h-SOW"/>
-                            <constraint firstItem="MSt-fy-VeA" firstAttribute="top" secondItem="bpL-rX-zuV" secondAttribute="bottom" constant="74" id="jzk-1z-J4n"/>
-                            <constraint firstItem="bpL-rX-zuV" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="93" id="nPd-xh-sZV"/>
+                            <constraint firstItem="MSt-fy-VeA" firstAttribute="top" secondItem="bpL-rX-zuV" secondAttribute="bottom" constant="50" id="jzk-1z-J4n"/>
+                            <constraint firstItem="bpL-rX-zuV" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="50" id="nPd-xh-sZV"/>
+                            <constraint firstAttribute="centerX" secondItem="SK8-gC-GMq" secondAttribute="centerX" constant="50" id="sHS-ej-sKg"/>
                             <constraint firstItem="YxS-Eu-bJL" firstAttribute="centerX" secondItem="MSt-fy-VeA" secondAttribute="centerX" id="wRJ-X5-m2e"/>
                         </constraints>
                     </view>
